feat(holiday): 调整导入接口

--- a/doc/错误码列表.md
+++ b/doc/错误码列表.md
@@ -11,6 +11,8 @@
 |B0001|系统执行出错|一级宏观错误码|
 |B0100|系统执行出错|二级宏观错误码|
 |B0101|签署token出错||
+|B0102|参数有误||
 |C0001|调用第三方服务出错|一级宏观错误码|
 |C0100|数据库服务出错|二级宏观错误码|
 |C0101|数据库服务出错||
+|C0102|数据库查询条件有误||
