feat: 添加全局错误处理

--- a/doc/错误码列表.md
+++ b/doc/错误码列表.md
@@ -8,6 +8,7 @@
 |A0101|用户名已存在||
 |A0102|用户名校验失败||
 |A0103|密码校验失败||
+|A0401|用户无权限||
 |B0001|系统执行出错|一级宏观错误码|
 |B0100|系统执行出错|二级宏观错误码|
 |B0101|签署token出错||
